python-hello-web/mattermost-prod-eks-alb.yaml
#apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
#kind: Ingress
#metadata:
#  name: my-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#spec:
#  backend:
#    serviceName: other
#    servicePort: 8080
#  rules:
#  - host: foo.mydomain.com
#    http:
#      paths:
#      - backend:
#          serviceName: python-hello-web-foo
#          servicePort: 5000
#  - host: mydomain.com
#    http:
#      paths:
#      - path: /bar/(.*)
#        backend:
#          serviceName: python-hello-web-bar
#          servicePort: 5000
#      - path: /bar2/(.*)
#        backend:
#          serviceName: python-hello-web-bar-v2
#          servicePort: 5000
#---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "mattermost-prod-alb-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: mattermost-prod
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "mattermost-prod"
              servicePort: 8065
